Fixed album title alignements

--- a/src/sass/components/_album.scss
+++ b/src/sass/components/_album.scss
@@ -12,5 +12,6 @@
         letter-spacing: 3px;
         text-transform: uppercase;
         font-size: 1.2em;
+        text-align: left;
     }
 }
